tillo/pages-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: tillo-pages
  namespace: tillo
spec:
  selector:
    app: tillo-pages
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
