tillo/tillo-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tillo
  namespace: tillo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.linkedin.com/in/martinodellambrogio/
spec:
  ingressClassName: nginx
  rules:
    - host: tillo.ch
      http:
        paths:
          - backend:
              service:
                name: nonexistent
                port:
                  name: none
            path: /
            pathType: Prefix
    - host: www.tillo.ch
      http:
        paths:
          - backend:
              service:
                name: nonexistent
                port:
                  name: none
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - tillo.ch
      - www.tillo.ch
      secretName: tillo-cert
